[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/IndustrialParallax.gd" type="Script" id=1]
[ext_resource path="res://Assets/3rdLayer.png" type="Texture" id=2]
[ext_resource path="res://Assets/cloudLayer.png" type="Texture" id=3]
[ext_resource path="res://Assets/1stLayer.png" type="Texture" id=4]
[ext_resource path="res://Assets/2ndLayer.png" type="Texture" id=5]
[ext_resource path="res://Assets/4thLayer.png" type="Texture" id=6]
[ext_resource path="res://UI/UI_Scenes/TitleScreen.gd" type="Script" id=7]
[ext_resource path="res://UI/UI_Scenes/AnimatedButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/Themes/temp_theme.tres" type="Theme" id=9]
[ext_resource path="res://UI/Themes/progenisis.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=1]
size = 18
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[node name="TitleScreen" type="Node"]
script = ExtResource( 7 )

[node name="TitlebackgroundParallax" type="ParallaxBackground" parent="."]
scroll_ignore_camera_zoom = true
script = ExtResource( 1 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="TitlebackgroundParallax"]
motion_scale = Vector2( 0.1, 0.6 )
motion_offset = Vector2( 5, 0 )
motion_mirroring = Vector2( 320, 0 )

[node name="Sprite" type="Sprite" parent="TitlebackgroundParallax/ParallaxLayer"]
texture = ExtResource( 6 )
centered = false

[node name="Clouds1" type="ParallaxLayer" parent="TitlebackgroundParallax"]
motion_scale = Vector2( 0.1, 0.6 )
motion_mirroring = Vector2( 320, 0 )

[node name="Sprite" type="Sprite" parent="TitlebackgroundParallax/Clouds1"]
texture = ExtResource( 3 )
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="TitlebackgroundParallax"]
motion_scale = Vector2( 0.3, 0.7 )
motion_mirroring = Vector2( 320, 0 )

[node name="Sprite" type="Sprite" parent="TitlebackgroundParallax/ParallaxLayer2"]
texture = ExtResource( 2 )
centered = false

[node name="Clouds2" type="ParallaxLayer" parent="TitlebackgroundParallax"]
motion_scale = Vector2( 0.3, 0.7 )
motion_offset = Vector2( 5, 0 )
motion_mirroring = Vector2( 320, 0 )

[node name="Sprite" type="Sprite" parent="TitlebackgroundParallax/Clouds2"]
texture = ExtResource( 3 )
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="TitlebackgroundParallax"]
motion_scale = Vector2( 0.7, 0.9 )
motion_mirroring = Vector2( 320, 0 )

[node name="Sprite" type="Sprite" parent="TitlebackgroundParallax/ParallaxLayer3"]
position = Vector2( 0, 10 )
texture = ExtResource( 5 )
centered = false

[node name="Clouds3" type="ParallaxLayer" parent="TitlebackgroundParallax"]
motion_scale = Vector2( 0.7, 0.9 )
motion_offset = Vector2( 0, 70 )
motion_mirroring = Vector2( 320, 0 )

[node name="Sprite" type="Sprite" parent="TitlebackgroundParallax/Clouds3"]
position = Vector2( -4, 0 )
texture = ExtResource( 3 )
centered = false

[node name="ParallaxLayer4" type="ParallaxLayer" parent="TitlebackgroundParallax"]
motion_mirroring = Vector2( 320, 0 )

[node name="Sprite" type="Sprite" parent="TitlebackgroundParallax/ParallaxLayer4"]
position = Vector2( 0, 6 )
texture = ExtResource( 4 )
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 127.5
margin_top = 65.0
margin_right = 192.5
margin_bottom = 115.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 9 )

[node name="Play" parent="VBoxContainer" instance=ExtResource( 8 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 65.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 22 )
rect_scale = Vector2( 1, 1 )
text = "Play"

[node name="Debug" parent="VBoxContainer" instance=ExtResource( 8 )]
margin_left = 0.0
margin_top = 26.0
margin_right = 65.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 22 )
rect_scale = Vector2( 1, 1 )
text = "Debug"

[node name="Options" parent="VBoxContainer" instance=ExtResource( 8 )]
margin_left = 0.0
margin_top = 52.0
margin_right = 65.0
margin_bottom = 74.0
rect_min_size = Vector2( 0, 22 )
rect_scale = Vector2( 1, 1 )
text = "Options"

[node name="Quit" parent="VBoxContainer" instance=ExtResource( 8 )]
margin_left = 0.0
margin_top = 78.0
margin_right = 65.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 22 )
rect_scale = Vector2( 1, 1 )
text = "Quit"

[node name="WaitTime" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -60.0
margin_right = 40.0
margin_bottom = -20.0
mouse_filter = 2
theme = ExtResource( 9 )
custom_fonts/normal_font = SubResource( 1 )
text = "Steeling
 Metel"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/Debug" to="." method="_on_Debug_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="timeout" from="WaitTime" to="." method="_on_WaitTime_timeout"]
